extras/05-buenas-practicas/ejemplo-kustomize/mi-deploy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: mi-deploy-ingress
spec:
  rules:
  - host: mi-app.com
    http:
      paths:
      - backend:
          service:
            name: mi-deploy-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
